packages/ui/lit-grid/src/dx-grid.pcss
@import './dx-grid-axis-resize-handle.pcss';
@import './dx-grid-multiselect-cell.pcss';

@layer dx-tokens {
  :root {
    --dx-grid-cell-padding-block: 0.2rem;
    --dx-grid-cell-content-padding-block: calc(
      var(--dx-grid-cell-padding-block) - var(--dx-grid-focus-indicator-width)
    );
    --dx-grid-cell-editor-padding-block: var(--dx-grid-cell-content-padding-block);
    --dx-grid-cell-padding-inline: 0.25rem;
    --dx-grid-cell-content-padding-inline: calc(
      var(--dx-grid-cell-padding-inline) - var(--dx-grid-focus-indicator-width)
    );
    --dx-grid-cell-editor-padding-inline: var(--dx-grid-cell-content-padding-inline);
  }
}

@layer dx-components {
  dx-grid {
    display: contents;
    --dx-grid-gap: 1px;
    --dx-plane-gap: 1px;
  }

  .dx-grid {
    display: grid;
    gap: var(--dx-plane-gap);
    grid-template-columns: min-content 1fr min-content;
    grid-template-rows: min-content 1fr min-content;
    font-variant-numeric: tabular-nums;

    inline-size: 100%;
    block-size: 100%;
    max-inline-size: 100dvw;
    max-block-size: 100dvh;

    touch-action: none;
    user-select: none;
  }

  .dx-grid__plane--frozen-row,
  .dx-grid__plane--frozen-col,
  .dx-grid__plane--fixed,
  .dx-grid__plane--grid {
    overflow: hidden;
    position: relative;
    display: grid;

    &:focus-visible {
      outline: none;
    }

    &:focus-visible::after {
      content: '';
      position: absolute;
      inset: 0;
      pointer-events: none;
      border: var(--dx-grid-focus-indicator-width) solid var(--color-focus-ring);
    }
  }

  .dx-grid__plane--fixed,
  .dx-grid__plane--frozen-row__content,
  .dx-grid__plane--frozen-col__content,
  .dx-grid__plane--grid__content {
    display: grid;
    gap: var(--dx-grid-gap);
  }

  .dx-grid {
    --grid-cell-surface: var(--color-grid-surface);
    --grid-cell-foreground: var(--color-grid-foreground);

    [role='gridcell'],
    [role='columnheader'],
    [role='rowheader'] {
      background: var(--grid-cell-surface);
      color: var(--grid-cell-foreground);
      cursor: pointer;
      position: relative;

      border-right: 1px solid var(--color-grid-line);
      border-bottom: 1px solid var(--color-grid-line);

      &[aria-readonly='true'] {
        cursor: default;
      }

      &[aria-readonly='true'][data-text-selectable='true'] {
        cursor: text;
        user-select: text;
      }

      &:focus {
        outline: none;
      }

      & > .dx-grid__cell__content {
        padding-inline: var(--dx-grid-cell-content-padding-inline);
        padding-block: var(--dx-grid-cell-content-padding-block);
        box-sizing: border-box;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        block-size: 100%;
        position: relative;
        border: var(--dx-grid-focus-indicator-width) solid transparent;
        border-radius: 2px;

        &:has(.dx-tag),
        &:has(dx-tag-picker-item) {
          text-overflow: clip;
          line-height: 0;
          --dx-grid-cell-content-padding-inline: 1px;
          --dx-grid-cell-content-padding-block: 1px;
        }
      }

      &.dx-grid__cell--commented {
        background: var(--color-grid-comment);
      }
    }

    &[data-grid-select] {
      [role='gridcell'],
      [role='columnheader'],
      [role='rowheader'] {
        &[aria-selected] {
          --grid-cell-surface: var(--color-grid-selection-surface);
          --grid-cell-foreground: var(--color-grid-selection-foreground);

          &:focus:not([aria-readonly='true']),
          &:focus-visible,
          &:focus-within {
            & > .dx-grid__cell__content {
              background: transparent;
            }
          }
        }
      }
    }

    .dx-grid__row--cta__cell {
      transition: background-color 100ms linear;
      & > .dx-grid__cell__content {
        cursor: pointer;
        background: transparent !important;
      }
    }

    &:has(.dx-grid__row--cta__cell:hover) .dx-grid__row--cta__cell {
      background: var(--color-grid-highlight);
    }
  }

  /* Editor and focused cell styles; be sure to keep these two blocks in-sync. */
  .dx-grid {
    [role='gridcell'],
    [role='columnheader'],
    [role='rowheader'] {
      &:not([data-focus-unfurl='false']):not(.dx-grid__cell--no-focus-unfurl) {
        &:focus,
        &:focus-within {
          & > .dx-grid__cell__content {
            min-block-size: 100%;
            block-size: min-content;
            max-block-size: min(12em, 50vh);

            min-inline-size: 100%;
            inline-size: min-content;
            max-inline-size: min(60ch, 90vw);

            overflow: auto;
            scrollbar-width: thin;
            overscroll-behavior: contain;

            white-space: normal;
            hyphens: auto;
            overflow-wrap: break-word;

            z-index: 1;

            background: var(--grid-cell-surface);
            color: var(--grid-cell-foreground);
          }

          &:not([aria-readonly='true']) > .dx-grid__cell__content {
            border-color: var(--color-focus-ring);
          }
        }
      }

      &:focus-visible > .dx-grid__cell__content {
        border-color: var(--color-focus-ring);
      }
    }
  }

  .dx-grid__cell-editor {
    font-variant-numeric: tabular-nums;
    white-space: normal;
    hyphens: auto;
    overflow-wrap: break-word;

    background: var(--dx-grid-base, var(--color-base-surface));
    border: var(--dx-grid-focus-indicator-width) solid var(--color-focus-ring);
    border-radius: 2px;

    --dx-grid-cell-editor-max-block-size: min(12em, 50vh);
    --dx-grid-cell-editor-max-inline-size: min(60ch, 90vw);

    block-size: min-content;
    max-block-size: var(--dx-grid-cell-editor-max-block-size);
    inline-size: min-content;
    max-inline-size: var(--dx-grid-cell-editor-max-inline-size);

    &:has(.dx-tag),
    &:has(dx-tag-picker-item) {
      text-overflow: clip;
      line-height: 0;
      --dx-grid-cell-editor-padding-inline: 1px;
      --dx-grid-cell-editor-padding-block: 1px;
    }
  }

  /* /// */
  .dx-grid-host:focus-within .dx-grid:not(:focus-within) {
    [role='gridcell'],
    [role='columnheader'],
    [role='rowheader'] {
      &[data-dx-active]:not([aria-readonly='true']) > .dx-grid__cell__content {
        border-color: var(--color-focus-ring);
      }
    }
  }

  /* TODO(thure): Finish implementation. */
  .dx-grid-layer--presentation {
    pointer-events: none;
    position: absolute;
    inset: 0;
    display: grid;
    gap: var(--dx-grid-gap);
    background: rgba(255, 0, 0, 0.1);

    & .dx-grid-layer--presentation__cell {
      background: rgba(0, 255, 0, 0.1);
    }
  }

  .dx-grid__cell--flagged {
    &::after {
      content: '';
      position: absolute;
      inset-block-start: 0;
      inset-inline-end: 0;
      inline-size: 0;
      block-size: 0;
      border-inline-start: 0.5em solid transparent;
      border-block-start: 0.5em solid var(--color-warning-text);
      z-index: 1;
    }
  }
}

/* TODO(thure): Move this somewhere better. */
.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

